@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2009-05-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/formats.rst: Add CALS to formats list.
+
+  <LI> coders/cals.c (RegisterCALSImage): Consolidate duplicate text
+        strings.
+
+</UL>
+<p>
 2009-05-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
