@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
-<title>GraphicsMagick Formats</title>
+<title>GraphicsMagick Supported Formats</title>
 <link rel="stylesheet" href="docutils-articles.css" type="text/css" />
 </head>
 <body>
@@ -48,8 +48,8 @@
 <li><a href="links.html">Links</a></li>
 </ul>
 </div>
-<div class="document" id="graphicsmagick-formats">
-<h1 class="title">GraphicsMagick Formats</h1>
+<div class="document" id="graphicsmagick-supported-formats">
+<h1 class="title">GraphicsMagick Supported Formats</h1>
 <p>GraphicsMagick uses an ASCII string known as &quot;magick&quot; (e.g. &quot;GIF&quot;) to
 identify file formats, algorithms acting as formats, built-in images, and
 embedded profile types. After a file has been read or &quot;pinged&quot;, the
@@ -90,12 +90,21 @@ Interleaved</td>
 <td>AVS X image</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>BMP</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/bmp/egff.htm">BMP</a></td>
 <td>RW</td>
 <td>Microsoft Windows bitmap</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>CGM</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/cals/egff.htm">CALS</a></td>
+<td>R</td>
+<td>Continuous Acquisition
+and Life-cycle Support
+Type 1 image</td>
+<td>Specified in MIL-R-28002 and MIL-PRF-28002.
+Standard blueprint archive format as used by the
+US military to replace microfiche.</td>
+</tr>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/cgm/egff.htm">CGM</a></td>
 <td>R</td>
 <td>Computer Graphics
 Metafile</td>
@@ -240,7 +249,7 @@ System</td>
 <td>FlashPix Format</td>
 <td>Requires FlashPix SDK.</td>
 </tr>
-<tr><td>GIF</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/gif/egff.htm">GIF</a></td>
 <td>RW</td>
 <td>CompuServe Graphics
 Interchange Format</td>
@@ -393,7 +402,7 @@ memory) may be calculated by the equation
 <td>MSL is the XML-based scripting language
 supported by the conjure utility.</td>
 </tr>
-<tr><td>MTV</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/mtv/egff.htm">MTV</a></td>
 <td>RW</td>
 <td>MTV Raytracing image
 format</td>
@@ -422,7 +431,7 @@ thumbnail format</td>
 <td>Palm pixmap</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>PBM</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/pbm/egff.htm">PBM</a></td>
 <td>RW</td>
 <td>Portable bitmap format
 (black and white)</td>
@@ -445,7 +454,7 @@ since larger images require huffman compression
 <td>HP Page Control Language</td>
 <td>For output to HP laser printers.</td>
 </tr>
-<tr><td>PCX</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/pcx/egff.htm">PCX</a></td>
 <td>RW</td>
 <td>ZSoft IBM PC Paintbrush
 file</td>
@@ -677,7 +686,7 @@ and height.</td>
 <td>VICAR rasterfile format</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>VIFF</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/viff/egff.htm">VIFF</a></td>
 <td>RW</td>
 <td>Khoros Visualization
 Image File Format</td>
@@ -688,7 +697,7 @@ Image File Format</td>
 <td>Wireless bitmap</td>
 <td>Support for uncompressed monochrome only.</td>
 </tr>
-<tr><td>WMF</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/wmf/egff.htm">WMF</a></td>
 <td>&nbsp;</td>
 <td>Windows Metafile</td>
 <td>Requires libwmf. By default, renders WMF files
@@ -702,13 +711,13 @@ specify the WMF background color (default white)
 or -texture filename to specify a background
 texture image.</td>
 </tr>
-<tr><td>WPG</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/wpg/egff.htm">WPG</a></td>
 <td>R</td>
 <td>Word Perfect Graphics
 File</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>XBM</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/xbm/egff.htm">XBM</a></td>
 <td>RW</td>
 <td>X Windows system bitmap,
 black and white only</td>
@@ -720,13 +729,13 @@ icons.</td>
 <td>GIMP image</td>
 <td>&nbsp;</td>
 </tr>
-<tr><td>XPM</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/xpm/egff.htm">XPM</a></td>
 <td>RW</td>
 <td>X Windows system pixmap</td>
 <td>Also known as &quot;PM&quot;. Used by the X Windows System
 to store color icons.</td>
 </tr>
-<tr><td>XWD</td>
+<tr><td><a class="reference" href="http://www.fileformat.info/format/xwd/egff.htm">XWD</a></td>
 <td>RW</td>
 <td>X Windows system window
 dump</td>
@@ -796,7 +805,8 @@ The output format is always ImageMagick <a class="reference" href="miff.html">MI
 </tr>
 <tr><td>IDENTITY</td>
 <td>R</td>
-<td>Hald CLUT identity image</td>
+<td><a class="reference" href="http://www.quelsolaar.com/technology/clut.html">Hald CLUT</a> identity
+image</td>
 <td>Generate a Hald CLUT identity image of a specified order.
 The order is specified as an argument like &quot;IDENTITY:8&quot;.
 The default order is eight, producing a 512x512 image.</td>
@@ -1192,10 +1202,10 @@ pattern</td>
 </tr>
 </tbody>
 </table>
-<p>GraphicsMagick provides a number of format identifiers which are used to
-add, remove, and save embedded profiles for images which can support
-embedded profiles. Image types which may contain embedded profiles are
-<a class="reference" href="http://www.remotesensing.org/libtiff/">TIFF</a>, <a class="reference" href="http://www.jpeg.org/">JPEG</a>, and PDF.</p>
+<p>GraphicsMagick provides a number of format identifiers which are used
+to add, remove, and save embedded profiles for images which can
+support embedded profiles. Image types which may contain embedded
+profiles are <a class="reference" href="http://www.remotesensing.org/libtiff/">TIFF</a>, <a class="reference" href="http://www.jpeg.org/">JPEG</a>, PDF, and PNG.</p>
 <table border="1" class="docutils">
 <caption>Supported Embedded Profile Formats</caption>
 <colgroup>
@@ -1253,24 +1263,23 @@ convert.</td>
 </tbody>
 </table>
 <p>Support for some of the formats are delegated to libraries or external
-programs. The README describes where to find these distributions and any
-special configuration options required.</p>
-<p>To get a complete listing of which image formats are supported on your
-system, type</p>
+programs. The README describes where to find these distributions and
+any special configuration options required.</p>
+<p>To get a complete listing of the image formats which are supported on
+your system, type</p>
 <pre class="literal-block">
 gm convert -list format
 </pre>
 <p>On some platforms, GraphicsMagick automatically processes these
-extensions: .gz for Zip compression, .Z for Unix compression, .bz2 for
-block compression, and .pgp for PGP encryption. For example, a PNM image
-called image.pnm.gz is automatically uncompressed with the gzip program
-and the image is subsequently read.</p>
+extensions: .gz for Zip compression, .Z for Unix compression, and .bz2
+for block compression. For example, a PNM image called image.pnm.gz is
+automatically uncompressed while the image is read.</p>
 <hr class="docutils" />
-<p>Copyright © GraphicsMagick Group 2002 - 2008</p>
+<p>Copyright © GraphicsMagick Group 2002 - 2009</p>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-05-19 18:10 UTC.
+Generated on: 2009-05-20 16:50 UTC.
 
 </div>
 </body>
